@@ -22,6 +22,8 @@ v 5-0.31
 - Added helper class ForeignMethod.
 - Added helper function void addForeignMethodInstance(Engine&, const String&, BaseClass*, bool (BaseClass::*pMethod)(FFIServices&)).
 
+utilPile.h created.
+
 
 ====================
 2018/2/13
